# winapi-terminal

./: .gitignore  LICENSE  makefile  pom.xml
src/main/c/: CMakeLists.txt  base_structs.cpp  base_structs.h  edu_blaylock_jni_impl_TerminalImpl.cpp  edu_blaylock_jni_impl_TerminalImpl.h  event_record.cpp  event_record.h
src/main/java/: Main.java
src/main/java/edu/blaylock/jni/flags/: BufferMode.java  ConsoleMode.java  ControlKeys.java  Encoding.java  WAttributes.java
src/main/java/edu/blaylock/jni/impl/: TerminalImpl.java
src/main/java/edu/blaylock/jni/structs/: ConsoleScreenBufferInfo.java  Coord.java  SmallRect.java
src/main/java/edu/blaylock/terminal/: Terminal.java
src/main/java/edu/blaylock/terminal/events/: Event.java  EventDispatcher.java  FocusEvent.java  KeyCode.java  KeyEvent.java  MenuEvent.java  MouseEvent.java  Record.java  WindowBufferSizeEvent.java
src/main/java/edu/blaylock/terminal/events/listeners/: FocusListener.java  KeyListener.java  Listener.java  MenuListener.java  WindowBufferSizeListener.java
src/main/java/edu/blaylock/terminal/io/: Reader.java  Writer.java
src/main/java/edu/blaylock/terminal/util/: Timer.java  Utils.java
